--- a/main.css
+++ b/main.css
@@ -89,3 +89,25 @@
     left: 35px;
   }
   
+  /* bga para realizar movimiento con el fondo */
+
+  .bga{
+      position: absolute;
+      width: 100%;
+      height: 100%;
+      /* display: flex;
+      justify-content: center;
+      align-items: center;
+      font-size: 45px; 
+      font-weight: bold; */
+      background: linear-gradient(135deg, #fff102,  #f10271, #00c298);
+      background-size: 400% 300%;
+      animation: BgGradient 5s ease infinite;
+  }
+  
+  @keyframes BgGradient {
+      0% {background-position: 0% 50%;}
+      50% {background-position: 100% 50%;}
+      100% {background-position: 0% 50%;}
+  }
+  
